# vscode-diff.nvim

./: .gitignore  Makefile  README.md  build.cmd  build.sh
.github/actions/setup-neovim/: action.yml
.github/instructions/: tests.instructions.md
.github/workflows/: build-and-test.yml  pr.yml  standalone-build-test.yml
dev-docs/: CROSS_PLATFORM_COMPATIBILITY.md  automatic-installation.md  explorer-mode.md
libvscode-diff/: CMakeLists.txt  build.cmd.in  default_lines_diff_computer.c  diff_tool.c
libvscode-diff/src/: char_level.c  myers.c  optimize.c  range_mapping.c  render_plan.c  sequence.c  string_hash_map.c  utf8_utils.c  utils.c
libvscode-diff/tests/: test_memory_leak.c
lua/vscode-diff/: auto_refresh.lua  commands.lua  config.lua  diff.lua  git.lua  installer.lua  render.lua
lua/vscode-diff/render/: core.lua  explorer.lua  init.lua  lifecycle.lua  view.lua
lua/vscode-diff/render/explorer/: filter.lua
plugin/: vscode-diff.lua
scripts/: test_diff_comparison.sh
tests/: completion_spec.lua  explorer_file_filter_spec.lua  explorer_staging_spec.lua  run_plenary_tests.sh
tests/render/: diffget_diffput_spec.lua
